welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: not found: value faireC
	faireC(c:Color) {
        ^PatternPicture:12: error: not found: value faireC
faireC(r);faireC(b);faireC(v);faireC(j);
^PatternPicture:12: error: not found: value faireC
faireC(r);faireC(b);faireC(v);faireC(j);
          ^PatternPicture:12: error: not found: value faireC
faireC(r);faireC(b);faireC(v);faireC(j);
                    ^PatternPicture:12: error: not found: value faireC
faireC(r);faireC(b);faireC(v);faireC(j);
                              ^