welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {def faireMotif {
	faireC(c:Color) {
	var j = Color.YELLOW
 	var r = Color.RED
 	var b = Color.BLUE
 	var v = Color.GREEN
 	avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();gauche();avance();gauche();avance();
 	baisseBrosse();leveBrosse();gauche();avance();gauche();avance(3);gauche()
}
faireC(r);faireC(b);faireC(v);faireC(j);
}
}